5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1573_996.log
== TEST (2019-03-11 14:58:00) 
-- CODE:
print("*****")
print("(* o o *) ")
print("* ^ * ")
print("* --- *")
print("***** ")
-- OUTPUT:
*****
(* o o *) 
* ^ * 
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:59:27) 
-- CODE:
print("*****")
print("(* o o *)")
print("  * ^ * ")
print(" * --- *")
print("  ***** ")
-- OUTPUT:
*****
(* o o *)
  * ^ * 
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:59:48) 
-- CODE:
print("  *****")
print("(* o o *)")
print("  * ^ * ")
print(" * --- *")
print("  ***** ")
-- EXECUTION TIME:
0.131175
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
  * ^ * 
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 11:52:17) 
-- CODE:
 print("*****")
print("* o o *")
 print("* ^ *")
print(" *---*")
print(" *****")
-- EXECUTION TIME:
0.159081
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print("*****")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 11:56:32) 
-- CODE:
 print(" *****")
print("(* o o *)")
 print("* ^ *")
print(" *---*")
print(" *****")
-- EXECUTION TIME:
0.19227
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print(" *****")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:53:04) 
-- CODE:
print(" *****")
print("(*o o*)")
print("*  ^   *")
print("* --- *")
print(" *****")
-- EXECUTION TIME:
0.218189
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(*o o*)
*  ^   *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
